<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_register">

    <FrameLayout
        android:id="@+id/register_frame"
        style="@style/RegisterFrames"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/register_login"
        style="@style/EnterText"
        android:hint="@string/create_your_login"
        app:layout_constraintEnd_toEndOf="@+id/register_frame"
        app:layout_constraintStart_toStartOf="@+id/register_frame"
        app:layout_constraintTop_toTopOf="@+id/register_frame"
        app:layout_constraintBottom_toTopOf="@id/register_password"/>

    <EditText
        android:id="@+id/register_password"
        style="@style/EnterText"
        android:hint="@string/create_your_password"
        app:layout_constraintEnd_toEndOf="@+id/register_frame"
        app:layout_constraintStart_toStartOf="@+id/register_frame"
        app:layout_constraintTop_toBottomOf="@+id/register_login"
        app:layout_constraintBottom_toTopOf="@id/register_button"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/register_button"
        style="@style/RegisterButtons"
        android:backgroundTint="#7EE6B9"
        android:text="@string/register"
        app:layout_constraintBottom_toBottomOf="@+id/register_frame"
        app:layout_constraintEnd_toEndOf="@+id/register_frame"
        app:layout_constraintStart_toStartOf="@+id/register_frame"
        app:layout_constraintTop_toBottomOf="@+id/register_password" />

</androidx.constraintlayout.widget.ConstraintLayout>